Bug 290671 - Tile policy of OpenStreetMap isn't respected in area download tool
Summary: Tile policy of OpenStreetMap isn't respected in area download tool
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-05 09:35 UTC by Nicolas Dumoulin
Modified: 2012-05-17 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Dumoulin 2012-01-05 09:35:55 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

As mentioned on http://wiki.openstreetmap.org/wiki/Tile_Usage_Policy, the tiles shouldn't be downloaded at a zoom level > 16, but the area download tool allow to download tiles until zoom level 18.
A quick discussion on IRC concludes that the feature was implemented while the tile policy was in draft status and didn't give this limitation.

Reproducible: Always

Steps to Reproduce:
Open Marble, and ask to download an area through the menu "File->Download an area"

Actual Results:  
The wizard allows to download tiles until zoom level 18

Expected Results:  
The wizard should only allow to download tiles until zoom level 16

OS: Linux (i686) release 3.0.0-14-generic-pae
Compiler: gcc
Comment 1 Dennis Nienhüser 2012-01-05 10:02:16 UTC
The policy now says "In particular, downloading significant areas of tiles at zoom levels 17 and higher for offline or later usage is forbidden without prior consultation with a System Administrator."

I'd propose that we define "significant area" to be something larger than 100m^2 and extend the current restriction for that.
Comment 2 Dennis Nienhüser 2012-05-17 09:24:20 UTC
Git commit c401f1f4304accf35ea0b61ac39b963ffe0b4ad3 by Dennis Nienhüser.
Committed on 17/05/2012 at 10:47.
Pushed by nienhueser into branch 'master'.

Respect updates in http://wiki.openstreetmap.org/wiki/Tile_Usage_Policy

The maximum tile zoom level for mass download is now restricted to 16
(prior 18). Also "fixes" the effect that downloads of high zoom levels
(17, 18) take considerably more time than zoom levels up to 16 -- which
happens because they are rendered on demand by the OSM servers.
Note that zoom level 17 and 18 can of course still be viewed in the map
and are cached like other zoom levels. The change only affects the
"Download Region" dialog.

M  +1    -1    src/QtMainWindow.cpp
M  +1    -1    src/marble_part.cpp

http://commits.kde.org/marble/c401f1f4304accf35ea0b61ac39b963ffe0b4ad3
Comment 3 Dennis Nienhüser 2012-05-17 10:02:05 UTC
Git commit c871c8aabca05c1b672602507a2aa18e0da3da9c by Dennis Nienhüser.
Committed on 17/05/2012 at 10:47.
Pushed by nienhueser into branch 'KDE/4.8'.

Respect updates in http://wiki.openstreetmap.org/wiki/Tile_Usage_Policy

The maximum tile zoom level for mass download is now restricted to 16
(prior 18). Also "fixes" the effect that downloads of high zoom levels
(17, 18) take considerably more time than zoom levels up to 16 -- which
happens because they are rendered on demand by the OSM servers.
Note that zoom level 17 and 18 can of course still be viewed in the map
and are cached like other zoom levels. The change only affects the
"Download Region" dialog.
(cherry picked from commit c401f1f4304accf35ea0b61ac39b963ffe0b4ad3)

M  +1    -1    src/QtMainWindow.cpp
M  +1    -1    src/marble_part.cpp

http://commits.kde.org/marble/c871c8aabca05c1b672602507a2aa18e0da3da9c